--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
+    }
   },
   "author": "",
   "license": "ISC",
@@ -13,4 +24,6 @@
     "express": "^4.21.1",
      "mongodb": "^3.1.9"
   }
+
 }
+ 
