--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "index.js",
     "test": "jest --coverage"
   },
   "jest": {
     "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["lcov", "text", "json"],
     "coverageThreshold": {
       "global": {
         "branches": 70,
@@ -22,8 +24,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-     "mongodb": "^3.1.9"
+    "mongodb": "^3.1.9"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 
 }
- 
+
