--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.120.0",
     "express": "^4.21.1",
-     "mongodb": "^3.1.9"
+    "mongodb": "^3.1.9"
   }
-
 }
- 
